feat/Some updates in sales logic, client logic and cliets_controller

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= client.name %></td>
         <td><%= client.balance %></td>
-        <td><%= link_to 'Create Sale', create_sale_client_path(client) %></td>
+        <td><%= link_to 'Create Sale' %></td>
       </tr>
     <% end %>
   </tbody>
