feat/mega update

--- a/app/views/clients/create_sale.html.erb
+++ b/app/views/clients/create_sale.html.erb
@@ -1,5 +1,6 @@
 <!-- app/views/clients/create_sale.html.erb -->
 <h1>Create Sale for <%= @clients.name %></h1>
+  <%= link_to 'Back to Index', root_path %>
 
 <%= form_with(url: create_sale_client_path(@clients), local: true) do |form| %>
   <div>
@@ -11,6 +12,8 @@
     <%= form.label :quantity, 'Quantity' %>
     <%= form.number_field :quantity %>
   </div>
+
+  <%= form.hidden_field :user_id, value: session[:user_id] %>
 
   <%= form.submit 'Create Sale' %>
 <% end %>
