--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,12 +1,12 @@
 <!-- app/views/clients/new.html.erb -->
 <h1>New Client</h1>
+  <%= link_to 'Back to Index', root_path %>
 
 <%= form_with(model: @clients, local: true) do |form| %>
   <div>
     <%= form.label :name, 'Name' %>
     <%= form.text_field :name %>
-     <%= form.label :balance, 'Your user_id' %>
-    <%= form.text_field :user_id %>
+ 
   </div>
 
   <%= form.submit 'Create Client' %>
