--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -4,4 +4,8 @@
 <p>
   <strong>User ID:</strong>
   <%= @stock.user_id %>
+    <strong>Price:</strong>
+  <%= @stock.price %>
+    <strong>Amount</strong>
+  <%= @stock.amount %>
 </p>
