feat/adding beehives logic, controller and views first beehive commit

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 
 
 <div>
-  <%= link_to 'Beehives', dashboard_path %>
+  <%= link_to 'Beehives', beehives_path %>
 </div>
 
 <%=  render "dashboard/sexo"%>
