--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,12 +15,12 @@
 </div>
 
 <div>
-  <%= link_to 'Dashboard', dashboard_path %>
+  <%= link_to 'Dashboard', dashboard_index_path	 %>
 </div>
 
 
 <div>
-  <%= link_to 'Beehives', beehives_path %>
+  <%= link_to 'Beehives', beehives_groups_path %>
 </div>
 
 <%=  render "dashboard/sexo"%>
