feat/added recipe feature - now each sell has a recipe that can be download. Included a gem to download in PDF(but not beeing used).

--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -4,11 +4,11 @@
     margin-left: 20px;
   }
 </style>
-
 <table>
   <h1>All Sales</h1>
   <thead>
     <tr>
+      <th>Recipe</th>
       <th>Client</th>
       <th>When</th>
       <th>Product</th>
@@ -17,20 +17,20 @@
       <th>Total</th>
     </tr>
   </thead>
-  <tbody>
-    <% @sales.each do |sale| %>
-      <% if sale.client && sale.stock %>
-        <tr>
-          <td><%= sale.client.name %></td>
-          <td><%= sale.created_at.strftime("%d/%m/%Y %H:%M") %></td>
-          <td><%= sale.stock.name %></td>
-          <td><%= sale.quantity %></td>
-          <td><%= sale.stock.price %></td>
-          <td><%= sale.total_price %></td>
-        </tr>
-      <% end %>
+ <tbody>
+  <% @sales.each do |sale| %>
+    <% if sale.client && sale.stock %>
+      <tr>
+        <td><%= link_to 'Download Recipe', download_recipe_sale_path(sale) %></td>
+        <td><%= sale.client.name %></td>
+        <td><%= sale.created_at.strftime("%d/%m/%Y %H:%M") %></td>
+        <td><%= sale.stock.name %></td>
+        <td><%= sale.quantity %></td>
+        <td><%= sale.stock.price %></td>
+        <td><%= sale.total_price %></td>
+      </tr>
     <% end %>
-  </tbody>
+  <% end %>
+</tbody>
   <%= link_to 'Back to Index', root_path %>
-
 </table>
