--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -24,5 +24,9 @@
   <%= f.label :price %>
   <%= f.number_field :price %>
 
+
+  <%= f.label :barcode %>
+  <%= f.number_field :barcode %>
+
   <%= f.submit %>
 <% end %>
