--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,4 +18,8 @@
   <%= link_to 'Dashboard', dashboard_index_path	 %>
 </div>
 
+<div>
+  <%= link_to 'Leitor', barcodes_scan_path	 %>
+</div>
+
 <%=  render "dashboard/sexo"%>
