--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,6 @@
   <h1> Dashboard</h1>
   <%= link_to 'Sales', dashboard_sales_path	 %>
     <%= link_to 'Home', root_path	 %>
+        <%= link_to 'Stock', root_path	 %>
+
 
