--- a/app/views/stocks/edit.html.erb
+++ b/app/views/stocks/edit.html.erb
@@ -14,6 +14,11 @@
     <%= form.number_field :amount %>
   </div>
 
+    <div>
+    <%= form.label :barcode %>
+    <%= form.number_field :barcode %>
+  </div>
+
   <div>
     <%= form.submit "Update" %>
   </div>
