feat - now you can export the day sales to an excel

--- a/app/views/dashboard/sales.html.erb
+++ b/app/views/dashboard/sales.html.erb
@@ -43,4 +43,6 @@
   </tbody>
 </table>
 
+<%= link_to 'Export to Excel', dashboard_export_path(format: :xlsx) %>
+
 <%= link_to 'Back to dashboard', dashboard_index_path %>
