--- a/app/views/dashboard/stock.html.erb
+++ b/app/views/dashboard/stock.html.erb
@@ -8,3 +8,5 @@
   </tr>
 <% end %>
 <%= link_to 'Home', root_path, class: 'btn btn-primary' %>
+<%= link_to 'Voltar', dashboard_index_path, class: 'btn btn-primary' %>
+
