--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,76 @@
-  <h1> Dashboard</h1>
-  <%= link_to 'Sales', dashboard_sales_path	 %>
-    <%= link_to 'Home', root_path	 %>
-      <%= link_to 'Stock', dashboard_stock_path	 %>
+<div class="container">
+  <h1>Dashboard</h1>
+  <div class="link-container">
+    <%= link_to 'Sales', dashboard_sales_path, class: 'btn btn-success' %>
+    <%= link_to 'Home', root_path, class: 'btn btn-primary' %>
+    <%= link_to 'Stock', dashboard_stock_path, class: 'btn btn-warning' %>
+  </div>
+</div>
 
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 
+  .container {
+    text-align: center;
+  }
+
+  h1 {
+    color: #333;
+    margin-bottom: 20px;
+  }
+
+  .link-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 15px 30px;
+    margin: 5px 0;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    width: 200px;
+  }
+
+  .btn-primary {
+    background-color: #0056b3;
+    color: white;
+  }
+
+  .btn-primary:hover {
+    background-color: #003366;
+  }
+
+  .btn-success {
+    background-color: #1e7e34;
+    color: white;
+  }
+
+  .btn-success:hover {
+    background-color: #155724;
+  }
+
+  .btn-warning {
+    background-color: #c69500;
+    color: black;
+  }
+
+  .btn-warning:hover {
+    background-color: #8c6d00;
+  }
+</style>
