--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,21 +1,121 @@
 <!-- app/views/stocks/index.html.erb -->
 <h1>All Stock Items</h1>
-<%= link_to 'Add Item', new_stock_path, class: 'button' %>
-  <%= link_to 'Back to Index', root_path %>
+<div class="actions">
+  <%= link_to 'Add Item', new_stock_path, class: 'btn btn-primary' %>
+  <%= link_to 'Back to Index', root_path, class: 'btn btn-secondary' %>
+</div>
 
+<div class="stock-list">
+  <% @stocks.each do |stock| %>
+    <div class="stock-item">
+      <h2><%= stock.name %></h2>
+      <p>Amount: <%= stock.amount %></p>
+      <p>Price: <%= stock.price %></p>
+      <p>Barcode: <%= stock.barcode %></p>
+      <p>Created At: <%= stock.created_at.in_time_zone('Brasilia').strftime('%d/%m/%Y - %H:%M:%S') %></p>
+      
+      <div class="stock-actions">
+        <%= form_with url: stock_path(stock), method: :post, class: 'delete-form' do %>
+          <%= hidden_field_tag :_method, :delete %>
+          <%= submit_tag 'Delete', class: 'btn btn-danger' %>
+        <% end %>
+        <%= link_to 'Edit', edit_stock_path(stock), class: 'btn btn-warning' %>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-<% @stocks.each do |stock| %>
-  <div>
-    <h2><%= stock.name %></h2>
-    <p>Amount: <%= stock.amount %></p>
-    <p>Price: <%= stock.price %></p>
-    <p>Barcode: <%= stock.barcode %></p>
-    <td><%= stock.created_at.in_time_zone('Brasilia').strftime('%d/%m/%Y - %H:%M:%S') %></td>  </tr>
-    
-    <%= form_with url: stock_path(stock), method: :post do %>
-      <%= hidden_field_tag :_method, :delete %>
-      <%= submit_tag 'Delete' %>
-    <% end %>
-    <%= link_to 'Edit', edit_stock_path(stock), class: 'button' %>
-  </div>
-<% end %>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 20px;
+  }
+
+  h1 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .actions {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .btn-primary {
+    background-color: #0056b3;
+    color: white;
+  }
+
+  .btn-primary:hover {
+    background-color: #003366;
+  }
+
+  .btn-secondary {
+    background-color: #6c757d;
+    color: white;
+  }
+
+  .btn-secondary:hover {
+    background-color: #5a6268;
+  }
+
+  .btn-danger {
+    background-color: #a71d2a;
+    color: white;
+  }
+
+  .btn-danger:hover {
+    background-color: #7f1420;
+  }
+
+  .btn-warning {
+    background-color: #c69500;
+    color: black;
+  }
+
+  .btn-warning:hover {
+    background-color: #8c6d00;
+  }
+
+  .stock-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+
+  .stock-item {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
+  }
+
+  .stock-item h2 {
+    margin-top: 0;
+  }
+
+  .stock-actions {
+    margin-top: 15px;
+  }
+
+  .delete-form {
+    display: inline;
+  }
+</style>
