feat - translate the most part of the things to portuguese

--- a/app/views/barcodes/_stock.html.erb
+++ b/app/views/barcodes/_stock.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h2>Product Details:</h2>
+  <h2>Detalhes do Produto:</h2>
   <p>Name: <%= stock["name"] %></p>
   <p>
     Price: $<span id="price_<%= index %>"><%= stock["price"] %></span>
