--- a/app/views/barcodes/no_product_found.js.erb
+++ b/app/views/barcodes/no_product_found.js.erb
@@ -1,7 +1,7 @@
 // app/views/barcodes/no_product_found.js.erb
 document.getElementById('product-details').innerHTML = `
-  <h2>No Product Found</h2>
-  <p>Barcode: <%= j params[:barcode] %> did not match any product in our records.</p>
+  <h2>Nenhum produto encontrado</h2>
+  <p>Barcode: <%= j params[:barcode] %> esse codigo de barras nao pertence a nenhum produto</p>
 `;
 
 // Clear the input field after the error message
