--- a/app/views/barcodes/search.js.erb
+++ b/app/views/barcodes/search.js.erb
@@ -1,6 +1,6 @@
 <!-- app/views/barcodes/search.js.erb -->
 document.getElementById('product-details').innerHTML = `
-  <h2>Product Found</h2>
+  <h2>Produto encontrado</h2>
   <p><strong>Name:</strong> <%= j @product.name %></p>
   <p><strong>Barcode:</strong> <%= j @product.barcode %></p>
   <p><strong>Price:</strong> <%= number_to_currency(@product.price) %></p>
