--- a/app/views/barcodes/show.html.erb
+++ b/app/views/barcodes/show.html.erb
@@ -1,8 +1,8 @@
 <!-- app/views/barcodes/show.html.erb -->
-<h1>Product Found</h1>
+<h1>Produto encontrado</h1>
 
-<p><strong>Name:</strong> <%= @stock.name %></p>
-<p><strong>Barcode:</strong> <%= @stock.barcode %></p>
-<p><strong>Price:</strong> <%= number_to_currency(@stock.price) %></p>
+<p><strong>Nome:</strong> <%= @stock.name %></p>
+<p><strong>Código de barras:</strong> <%= @stock.barcode %></p>
+<p><strong>Preço:</strong> <%= number_to_currency(@stock.price) %></p>
 
-<a href="<%= barcodes_scan_path %>">Scan Another</a>
+<a href="<%= barcodes_scan_path %>">Scaniar outro</a>
