--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <h1>Dashboard</h1>
   <div class="link-container">
-    <%= link_to 'Sales', dashboard_sales_path, class: 'btn btn-success' %>
+    <%= link_to 'Vendas', dashboard_sales_path, class: 'btn btn-success' %>
     <%= link_to 'Home', root_path, class: 'btn btn-primary' %>
-    <%= link_to 'Stock', dashboard_stock_path, class: 'btn btn-warning' %>
+    <%= link_to 'Estoque', dashboard_stock_path, class: 'btn btn-warning' %>
   </div>
 </div>
 
