--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
   <h1>Dashboard</h1>
   <div class="button-container">
     <%= button_to 'Logout', logout_path, method: :delete, class: 'btn btn-danger' %>
-    <%= link_to 'Sales', sales_path, class: 'btn btn-success' %>
-    <%= link_to 'Stock', stocks_path, class: 'btn btn-warning' %>
+    <%= link_to 'Vendas', sales_path, class: 'btn btn-success' %>
+    <%= link_to 'Estoque', stocks_path, class: 'btn btn-warning' %>
     <%= link_to 'Dashboard', dashboard_index_path, class: 'btn btn-primary' %>
     <%= link_to 'Leitor', barcodes_scan_path, class: 'btn btn-orange' %>
   </div>
