--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -4,11 +4,11 @@
   <table class="sales-table">
     <thead>
       <tr>
-        <th>Recipe</th>
-        <th>When</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Price</th>
+        <th>Nota</th>
+        <th>Quando</th>
+        <th>Produto</th>
+        <th>Quantidade</th>
+        <th>Preço</th>
         <th>Total</th>
       </tr>
     </thead>
@@ -27,7 +27,7 @@
       <% end %>
     </tbody>
   </table>
-  <%= link_to 'Back to Index', root_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Voltar para o inicio', root_path, class: 'btn btn-secondary' %>
 </div>
 
 <style>
