--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= link_to 'Back to Index', root_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Voltar para o inicio', root_path, class: 'btn btn-secondary' %>
 
   <%= form_for @stock, url: stocks_path, class: 'stock-form' do |f| %>
     <div class="form-group">
