--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -3,14 +3,15 @@
   <h1><%= @stock.name %></h1>
 
   <div class="stock-details">
+  
     <p>
-      <strong>User ID:</strong> <%= @stock.user_id %>
+      <strong>Preço:</strong> <%= @stock.price %>
     </p>
     <p>
-      <strong>Price:</strong> <%= @stock.price %>
+      <strong>Quantidade:</strong> <%= @stock.amount %>
     </p>
-    <p>
-      <strong>Amount:</strong> <%= @stock.amount %>
+      <p>
+      <strong>Código de barras:</strong> <%= @stock.barcode %>
     </p>
   </div>
 
