--- a/app/views/sales/recipe.pdf.erb
+++ b/app/views/sales/recipe.pdf.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Recipe</title>
+  <title>Nota</title>
 </head>
 <body>
-  <h1>Recipe</h1>
+  <h1>Nota</h1>
   <p><%= @recipe %></p>
 </body>
 </html>
