--- a/app/views/stocks/edit.html.erb
+++ b/app/views/stocks/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Edit Stock Item</h1>
+  <h1>Editar produto</h1>
   <div class="form-container">
     <%= form_with(model: @stock, local: true, class: 'stock-form') do |form| %>
       <div class="form-group">
