--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/users/new.html.erb -->
-<h1>Sign Up</h1>
+<h1>Criar conta</h1>
 
 <%= form_with(model: @user, local: true) do |form| %>
   <% if @user.errors.any? %>
